# university

./: .gitignore  README.md
1sem/prog_languages/KR1/: 1.cpp  2.cpp  3.cpp  4.cpp  ans.cpp
1sem/prog_languages/L10/: L10_quest1_var21.cpp  L10_quest2_var21.cpp  L10_quest3_var21-1try.cpp  L10_quest3_var21-2try.cpp
1sem/prog_languages/L10-Lection_ans/: Fibba.cpp  SimpleDimpleNumbers.cpp
1sem/prog_languages/L2/: L2_quest1_var21.cpp
1sem/prog_languages/L3/: L3_quest1_var21.cpp  L3_quest2_var21.cpp  L3_quest3_var21.cpp  L3_quest4_var21.cpp  L3_quest5_var21.cpp  L3_quest6_var21.cpp
1sem/prog_languages/L4/: L4_quest10_var21.cpp  L4_quest1_var21.cpp  L4_quest2_var21.cpp  L4_quest3_var21.cpp  L4_quest4_var21.cpp  L4_quest5_var21.cpp  L4_quest6_var21.cpp  L4_quest7_var21.cpp  L4_quest8_var21.cpp  L4_quest9_var21.cpp
1sem/prog_languages/L5/: L5_quest1_var21.cpp  (+3 more)
3sem/misppi/: lab4.rar
3sem/moad/lab1/: Mall_Customers.csv  main.py  pyproject.toml  users.csv
3sem/python/: main.tex  report.tex  titleconfig.tex
4sem/: .gitignore
4sem/jaba/: readme.md
4sem/web/: .gitignore  readme.md
lab4/Properties/: Resources.resx
lab4/lab4_task1/: Form1.cs
lab4/lab4_task2/: Form1.Designer.cs
lab4/lab4_task3/: Form1.cs  Program.cs  Sniper.cs
lab7/: ~$СППИ лаб7.docx
lab7/lab7/: Form1.cs  lab7.csproj  lab7.sln
lab7/project2/: Form1.Designer.cs  Form1.cs  Program.cs
lab7/project3/: Form1.Designer.cs  Form1.cs  Program.cs  project3.csproj  re_gen.py
lab7/project32/: Form1.cs  Program.cs
lab7/project4/: FileManager.cs  Form1.Designer.cs  Program.cs
(+424 files in other folders)
