[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["ZetoOfficial <tpptgs@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
Faker = "^15.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
